Dark Mode Fix (#174)
* Add files via upload

* Add files via upload

* Update _vars.scss

* Update dark_mode.scss

* Update _toc.scss

* Update index.html

* Update header.html

* Update header.html

* Delete website/assets/images/logos/pactus-logo-dark.png

* Delete website/assets/images/logos/pactus-logo-light.png

* Add files via upload

* Update index.html

* Update dark_mode.scss

* Update index.html

--- a/website/_sass/_toc.scss
+++ b/website/_sass/_toc.scss
@@ -3,7 +3,7 @@
 .toc {
   .btn,
   a {
-    color: $font-color !important;
+    color: $font-color;
   }
 
   .btn-section {
@@ -37,3 +37,4 @@
     background-color: #d2f4ea;
   }
 }
+
